--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -35,3 +35,6 @@ const { title, description, permalink } = Astro.props;
 <!-- Fonts -->
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans:wght@400;700&display=swap">
+
+<!-- Netlify identity-->
+<script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
