fixing some things

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,9 +12,9 @@ interface MarkdownFrontmatter {
 // You can write any JavaScript/TypeScript that you'd like here.
 // It will run during the build, but never in the browser.
 // All variables are available to use in the HTML template below.
-let title = 'Example Blog';
-let description = 'The perfect starter for your perfect blog.';
-let permalink = 'https://example.com/';
+let title = 'Build for the Web';
+let description = 'Links and sites that let you build on and for the web.';
+let permalink = 'https://build-for-the-web.netlify.app/';
 
 // Data Fetching: List all Markdown posts in the repo.
 
